<resources>
    <string name="app_name">BIT603_A3_Tarrynt_Whitty</string>
    <string name="logInTitle">Kiwi Cookies and Cakes Inventory</string>
    <string name="UserHint">User Name</string>
    <string name="PassHint">Password</string>
    <string name="LogInButton">Log In</string>
    <string name="AdminTitle">Admin Menu</string>
    <string name="VeiwUsers">Veiw Users</string>
    <string name="AddUser">Add User</string>
    <string name="RemoveUser">Remove User</string>
    <string name="NewUserTitle">Add New User</string>
    <string name="DateOfBirth">Date Of Birth</string>
    <string name="EmployeeNumber">Employee Number</string>
    <string name="Address">Address</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="UserPhone">Phone Number</string>
    <string name="TitleRemoveUser">Remove User</string>
    <string name="RemoveUserHint">Username To Remove</string>
    <string name="RemoveUserButton">Remove</string>
    <string name="UserNameListTitle">Users</string>
    <string name="Menu">Menu</string>
    <string name="InventoryStatus">Inventory Status</string>
    <string name="AddItem">Add Item</string>
    <string name="AddTestItem">Add Test Items</string>
    <string name="ClearTestItem">Clear Test Items</string>
    <string name="StockTitle">Stock</string>
    <string name="RemoveItem">Remove Item</string>
    <string name="UpdateItem">Update</string>
    <string name="Ammount">New Ammount</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemType">Item Type</string>
    <string name="Biscuit">Biscuit</string>
    <string name="Cookie">Cookie</string>
    <string name="Cake">Cake</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Other">Other</string>
</resources>